apply plugin: 'com.android.application'

def versionMajor = 0
def versionMinor = 8
def versionPatch = 0

def dev = false
def appId = dev ? "com.vlad805.fmradio.dev" : "com.vlad805.fmradio"
def appVersionName = "${versionMajor}.${versionMinor}.${versionPatch}"
def requiredNativeAssets = [
        "fmbin-armv7a",
        "fmbin-aarch64",
]
def releaseKeystorePath = System.getenv("ANDROID_RELEASE_KEYSTORE_PATH")
def releaseStorePassword = System.getenv("ANDROID_RELEASE_STORE_PASSWORD")
def releaseKeyAlias = System.getenv("ANDROID_RELEASE_KEY_ALIAS")
def releaseKeyPassword = System.getenv("ANDROID_RELEASE_KEY_PASSWORD")
def isNonEmpty = { value -> value != null && !value.trim().isEmpty() }
def hasReleaseSigning =
        isNonEmpty(releaseKeystorePath) &&
        isNonEmpty(releaseStorePassword) &&
        isNonEmpty(releaseKeyAlias) &&
        isNonEmpty(releaseKeyPassword)

android {
    compileSdk = 36
    namespace = "com.vlad805.fmradio"

    defaultConfig {
        applicationId = appId
        minSdk = 23
        //noinspection ExpiredTargetSdkVersion
        targetSdk = 24
        versionCode = versionMajor * 10000 + versionMinor * 100 + versionPatch
        versionName = appVersionName

        ndk {
            //noinspection ChromeOsAbiSupport
            abiFilters "armeabi-v7a", "arm64-v8a"
        }
    }

    signingConfigs {
        if (hasReleaseSigning) {
            release {
                storeFile file(releaseKeystorePath)
                storePassword releaseStorePassword
                keyAlias releaseKeyAlias
                keyPassword releaseKeyPassword
            }
        }
    }

    buildTypes {
        debug {
            applicationIdSuffix ".dev"
        }

        release {
            minifyEnabled = true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            if (hasReleaseSigning) {
                signingConfig signingConfigs.release
            }
        }
    }

    buildFeatures {
        buildConfig = true
    }

    externalNativeBuild {
        cmake {
            path = file("src/main/cpp/CMakeLists.txt")
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    lint {
        abortOnError = false
        checkReleaseBuilds = false
    }

    dependenciesInfo {
        // Disables dependency metadata when building APKs.
        includeInApk = false
        // Disables dependency metadata when building Android App Bundles.
        includeInBundle = false
    }
}

androidComponents {
    onVariants(selector().all()) { variant ->
        variant.outputs.each { output ->
            output.outputFileName.set("${variant.applicationId.get()}-${appVersionName}.apk")
        }
    }
}

tasks.register("verifyNativeAssets") {
    group = "verification"
    description = "Checks that required native binaries are present in app/src/main/assets"

    def assetsDir = layout.projectDirectory.dir("src/main/assets")

    inputs.dir(assetsDir)

    doLast {
        def assetsDirFile = assetsDir.asFile

        def missingAssets = requiredNativeAssets.findAll { assetName ->
            !new File(assetsDirFile, assetName).exists()
        }

        if (!missingAssets.isEmpty()) {
            throw new GradleException(
                    "Missing native assets in ${assetsDirFile}: ${missingAssets.join(', ')}. " +
                            "Build native assets before assembling the app."
            )
        }
    }
}

tasks.register("buildFmbinNative", Exec) {
    group = "build"
    description = "Builds native fmbin assets for supported Android ABIs"

    def nativeDir = layout.projectDirectory.dir("../native")
    def assetsDir = layout.projectDirectory.dir("src/main/assets")
    def localProperties = new Properties()
    def localPropertiesFile = rootProject.file("local.properties")
    if (localPropertiesFile.exists()) {
        localPropertiesFile.withInputStream { localProperties.load(it) }
    }
    def androidSdkPath = System.getenv("ANDROID_SDK_ROOT")
            ?: System.getenv("ANDROID_HOME")
            ?: localProperties.getProperty("sdk.dir")

    inputs.dir(nativeDir)
    outputs.files(requiredNativeAssets.collect { assetName ->
        assetsDir.file(assetName)
    })

    if (androidSdkPath != null) {
        environment "ANDROID_HOME", androidSdkPath
        environment "ANDROID_SDK_ROOT", androidSdkPath
    }
    commandLine "bash", nativeDir.file("build.sh").asFile.absolutePath
}

tasks.named("verifyNativeAssets").configure {
    dependsOn("buildFmbinNative")
}

tasks.named("preBuild").configure {
    dependsOn("verifyNativeAssets")
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.core:core:1.18.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'androidx.annotation:annotation:1.10.0'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.media:media:1.8.0'
    implementation 'com.google.android.material:material:1.14.0'
    implementation 'com.github.atsushi-ageet:tray:0.14.0'
}
